feat: add Navbar and AppLink

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,8 +1,12 @@
 .app.light {
 
   --bg-color: #e0e4fc;
+  --inverted-bg-color: #3f4866;
 
   --primary-color: #244cc7;
   --secondary-color: #25a38b;
+
+  --inverted-primary-color: #e6e8ef;
+  --inverted-secondary-color: #9ef6e7;
 
 }
